
bug #25379: sys.exit() causes traceback and should not
https://savannah.nongnu.org/bugs/index.php?25379

Increase default volume size (--volsize) to 25M from 5M.  This
reduces the number of volumes to accomodate larger backups.

Reworked patch 6701 to list collection one at a time rather than
writing all as one huge list.  Was causing memeory problems when
the collections got large.


New in v0.5.06 (2009/01/09)
---------------------------
Fix to deprecation warnings about sha and md5 modules.
Uses hashlib if available, otherwise original module.

Added loop to run-all-tests.sh to run all tests against all supported
versions of Python if available.  Looks for 2.3, 2.4, 2.5, 2.6.

Noah Spurrier has given us permission to distribute pexpect.py along
with duplicity, so this will no longer be an install requirement.

NcFTP version 3.2.0 will not work with duplicity since we require the
use of both -f and -C options on ncftpput.  3.1.9, 3.2.1+ work fine.
I put in error checks for this situation in the FTP backend code.

bug #25230: --include-globbing-filelist only including first entry.
https://savannah.nongnu.org/bugs/?25230

bug #25239: Error during clean, wrong case in duplcicity
https://savannah.nongnu.org/bugs/?25239

patch #6709: Report correct number of volumes when restoring
https://savannah.nongnu.org/patch/?6709

sr #106583: document the need to use the --force option
https://savannah.nongnu.org/support/?106583


New in v0.5.05 (2008/12/30)
---------------------------
bug #25194: Duplicity 5.04 requires python-distutils-extra...
https://savannah.nongnu.org/bugs/?25194


New in v0.5.04 (2008/12/27)
---------------------------
patch #6678: Add progress metering
https://savannah.nongnu.org/patch/?6678

patch #6686: Add error codes for all fatal errors
https://savannah.nongnu.org/patch/?6686

bug #25090: Typos and trailing whitespace in duplicity manpage
https://savannah.nongnu.org/bugs/?25090

bug #24889: NCFTP cannot deal with some FTP servers