@@ -17,12 +17,16 @@ sign_key = ""
 sign_passphrase = ""
 
 # URLs for testing
+# NOTE: if the ***_url is None or "" the test
+# is skipped and is noted in the test results.
+
 file_url = "file:///home/ken/testdup"
 file_password = None
 
-ftp_url = "ftp://ken@xyzzyx/testdup"
+ftp_url = None
 ftp_password = None
 
+# To set up rsyncd for test:
 # /etc/rsyncd.conf contains
 # [testdup]
 # path = /home/ken/testdup
@@ -31,23 +35,23 @@ ftp_password = None
 #
 # NOTE: chmod 777 /home/ken/testdup
 
-rsync_abspath_url = "rsync://ken@xyzzyx//home/ken/testdup"
-rsync_relpath_url = "rsync://ken@xyzzyx/testdup"
-rsync_module_url = "rsync://ken@xyzzyx::/testdup"
+rsync_abspath_url = None
+rsync_relpath_url = None
+rsync_module_url = None
 rsync_password = None
 
-ssh_url = "ssh://ken@xyzzyx/testdup"
+ssh_url = None
 ssh_password = None
 
-s3_url = "s3+http://testdup/test"
-s3_access_key = ""
-s3_secret_key = ""
+s3_url = None
+s3_access_key = None
+s3_secret_key = None
 
-webdav_url = "webdav://ken@xyzzyx/testdup"
-webdav_password = ""
+webdav_url = None
+webdav_password = None
 
-webdavs_url = "webdavs://ken@xyzzyx/testdup"
-webdavs_password = ""
+webdavs_url = None
+webdavs_password = None
 
 def setup():
     """ setup for unit tests """
